// Copyright 2019 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package google.bigtable.admin.v2;

import "google/longrunning/operations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = "google.golang.org/genproto/googleapis/bigtable/admin/v2;admin";
option java_multiple_files = true;
option java_outer_classname = "BackupProto";
option java_package = "com.google.bigtable.admin.v2";

// A backup of a Cloud Bigtable table.
message Backup {
  // Indicates the current state of the backup.
  enum State {
    // Not specified.
    STATE_UNSPECIFIED = 0;

    // The pending backup is still being created. Operations on the
    // backup may fail with `FAILED_PRECONDITION` in this state.
    CREATING = 1;

    // The backup is complete and ready for use.
    READY = 2;
  }

  // Output only. A globally unique identifier for the backup which cannot be
  // changed. Values are of the form
  // `projects/<project>/instances/<instance>/clusters/<cluster>/
  //    backups/[_a-zA-Z0-9][-_.a-zA-Z0-9]*`
  // The final segment of the name must be between 1 and 50 characters
  // in length.
  //
  // The backup is stored in the cluster identified by the prefix of the backup
  // name of the form
  // `projects/<project>/instances/<instance>/clusters/<cluster>`.
  string name = 1;

  // Immutable. Required for the [CreateBackup][google.bigtable.admin.v2.BigtableTableAdmin.CreateBackup]
  // operation. Name of the table from which this backup was created. This needs
  // to be in the same instance as the backup. Values are of the form
  // `projects/<project>/instances/<instance>/tables/<table>`.
  string source_table = 2;

  // Required for the [CreateBackup][google.bigtable.admin.v2.BigtableTableAdmin.CreateBackup]
  // operation. The expiration time of the backup, with microseconds
  // granularity that must be at least 6 hours and at most 30 days
  // from the time the request is received. Once the `expire_time`
  // has passed, Cloud Bigtable will delete the backup and free the
  // resources used by the backup.
  google.protobuf.Timestamp expire_time = 3;

  // Output only. `start_time` is the time that the backup was started
  // (i.e. approximately the time the
  // [CreateBackup][google.bigtable.admin.v2.BigtableTableAdmin.CreateBackup] request is received).  The
  // row data in this backup will be no older than this timestamp.
  google.protobuf.Timestamp start_time = 4;

  // Output only. `end_time` is the time that the backup was finished. The row
  // data in the backup will be no newer than this timestamp.
  google.protobuf.Timestamp end_time = 5;

  // Output only. Size of the backup in bytes.
  int64 size_bytes = 6;

  // Output only. The current state of the backup.
  State state = 7;
}

// The request for [CreateBackup][google.bigtable.admin.v2.BigtableTableAdmin.CreateBackup].
message CreateBackupRequest {
  // Required. This must be one of the clusters in the instance in which this
  // table is located. The backup will be stored in this cluster. Values are
  // of the form `projects/<project>/instances/<instance>/clusters/<cluster>`.
  string parent = 1;

  // Required. The id of the backup to be created. The `backup_id` along with
  // the parent `parent` are combined as <parent>/backups/<backup_id> to create
  // the full backup name, of the form:
  // `projects/<project>/instances/<instance>/clusters/<cluster>/backups/<backup_id>`.
  // This string must be between 1 and 50 characters in length and match the
  // regex [_a-zA-Z0-9][-_.a-zA-Z0-9]*.
  string backup_id = 2;

  // Required. The backup to create.
  Backup backup = 3;
}

// Metadata type for the operation returned by
// [CreateBackup][google.bigtable.admin.v2.BigtableTableAdmin.CreateBackup].
message CreateBackupMetadata {
  // The name of the backup being created.
  string name = 1;

  // The name of the table the backup is created from.
  string source_table = 2;

  // The time at which this operation started.
  google.protobuf.Timestamp start_time = 3;

  // If set, the time at which this operation finished.
  google.protobuf.Timestamp end_time = 4;
}

// The request for [UpdateBackup][google.bigtable.admin.v2.BigtableTableAdmin.UpdateBackup].
message UpdateBackupRequest {
  // Required. The backup to update. `backup.name`, and the fields to be updated
  // as specified by `update_mask` are required. Other fields are ignored.
  // Update is only supported for the following fields:
  //  * `backup.expire_time`.
  Backup backup = 1;

  // Required. A mask specifying which fields (e.g. `expire_time`) in the
  // Backup resource should be updated. This mask is relative to the Backup
  // resource, not to the request message. The field mask must always be
  // specified; this prevents any future fields from being erased accidentally
  // by clients that do not know about them.
  google.protobuf.FieldMask update_mask = 2;
}

// The request for [GetBackup][google.bigtable.admin.v2.BigtableTableAdmin.GetBackup].
message GetBackupRequest {
  // Required. Name of the backup.
  // Values are of the form
  // `projects/<project>/instances/<instance>/clusters/<cluster>/backups/<backup>`.
  string name = 1;
}

// The request for [DeleteBackup][google.bigtable.admin.v2.BigtableTableAdmin.DeleteBackup].
message DeleteBackupRequest {
  // Required. Name of the backup to delete.
  // Values are of the form
  // `projects/<project>/instances/<instance>/clusters/<cluster>/backups/<backup>`.
  string name = 1;
}

// The request for [ListBackups][google.bigtable.admin.v2.BigtableTableAdmin.ListBackups].
message ListBackupsRequest {
  // Required. The cluster to list backups from.  Values are of the
  // form `projects/<project>/instances/<instance>/clusters/<cluster>`.
  // Use `<cluster> = '-'` to list backups for all clusters in an instance,
  // e.g., `projects/<project>/instances/<instance>/clusters/-`.
  string parent = 1;

  // A filter expression that filters backups listed in the response.
  // The expression must specify the field name, a comparison operator,
  // and the value that you want to use for filtering. The value must be a
  // string, a number, or a boolean. The comparison operator must be
  // <, >, <=, >=, !=, =, or :. Colon ‘:’ represents a HAS operator which is
  // roughly synonymous with equality. Filter rules are case insensitive.
  //
  // The fields eligible for filtering are:
  //   * `name`
  //   * `table`
  //   * `state`
  //   * `start_time` (and values are of the format YYYY-MM-DDTHH:MM:SSZ)
  //   * `end_time` (and values are of the format YYYY-MM-DDTHH:MM:SSZ)
  //   * `expire_time` (and values are of the format YYYY-MM-DDTHH:MM:SSZ)
  //   * `size_bytes`
  //
  // To filter on multiple expressions, provide each separate expression within
  // parentheses. By default, each expression is an AND expression. However,
  // you can include AND, OR, and NOT expressions explicitly.
  //
  // Some examples of using filters are:
  //
  //   * `name:"exact"` --> The backup's name is the string "exact".
  //   * `name:howl` --> The backup's name contains the string "howl".
  //   * `table:prod`
  //          --> The table's name contains the string "prod".
  //   * `state:CREATING` --> The backup is pending creation.
  //   * `state:READY` --> The backup is fully created and ready for use.
  //   * `(name:howl) AND (start_time < \"2018-03-28T14:50:00Z\")`
  //          --> The backup name contains the string "howl" and start_time
  //              of the backup is before 2018-03-28T14:50:00Z.
  //   * `size_bytes > 10000000000` --> The backup's size is greater than 10GB
  string filter = 2;

  // An expression for specifying the sort order of the results of the request.
  // The string value should specify only one field in [Backup][google.bigtable.admin.v2.Backup]. Fields
  // supported are:
  //    * name
  //    * table
  //    * expire_time
  //    * start_time
  //    * end_time
  //    * size_bytes
  //    * state
  //
  // For example, "start_time". The default sorting order is ascending.
  // To specify descending order for the field, a suffix " desc" should
  // be appended to the field name. For example, "start_time desc".
  // Redundant space characters in the syntax are insigificant.
  //
  // If order_by is empty, results will be sorted by `start_time` in descending
  // order starting from the most recently created backup.
  string order_by = 3;

  // Number of backups to be returned in the response. If 0 or
  // less, defaults to the server's maximum allowed page size.
  int32 page_size = 4;

  // If non-empty, `page_token` should contain a
  // [next_page_token][google.bigtable.admin.v2.ListBackupsResponse.next_page_token] from a
  // previous [ListBackupsResponse][google.bigtable.admin.v2.ListBackupsResponse] to the same `parent` and with the same
  // `filter`.
  string page_token = 5;
}

// The response for [ListBackups][google.bigtable.admin.v2.BigtableTableAdmin.ListBackups].
message ListBackupsResponse {
  // The list of matching backups.
  repeated Backup backups = 1;

  // `next_page_token` can be sent in a subsequent
  // [ListBackups][google.bigtable.admin.v2.BigtableTableAdmin.ListBackups] call to fetch more
  // of the matching backups.
  string next_page_token = 2;
}

// Information about a backup.
message BackupInfo {
  // Output only. Name of the backup.
  string backup = 1;

  // Output only. The time that the backup was started. Row data in the backup
  // will be no older than this timestamp.
  google.protobuf.Timestamp start_time = 2;

  // Output only. This time that the backup was finished. Row data in the
  // backup will be no newer than this timestamp.
  google.protobuf.Timestamp end_time = 3;

  // Output only. Name of the table the backup was created from.
  string source_table = 4;
}
